--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -105,7 +105,9 @@ $(function () {
 
 			</div>
 		</nav>
-		<div class="container">
+
+		<div id="wrap">
+		<div class="container" id="main">
 			
 			{% block content %}
 
@@ -168,6 +170,7 @@ $(function () {
 
       {% endblock %}
 
+		</div>
 		</div>
 
     <footer class="footer">
