--- a/app/static/css/melopedia.css
+++ b/app/static/css/melopedia.css
@@ -1,6 +1,18 @@
 body {
 	  padding-top: 50px;
 }
+html, body {
+  height: 100%;
+}
+
+#wrap {
+  min-height: 100%;
+}
+
+#main {
+  overflow:auto;
+  padding-bottom:60px; /* this needs to be bigger than footer height*/
+}
 
 .navbar-brand::first-letter, .navbar-brand span {color: #d56866;}
 
@@ -294,11 +306,12 @@ body {
 
 /* Footer */
 .footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
+  margin-top: -60px;
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
